statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mstream
spec:
  selector:
    matchLabels:
      app: mstream
  serviceName: "mstream"
  replicas: 1
  template:
    metadata:
      labels:
        app: mstream
    spec:
      containers:
        - name: mstream
          image: lscr.io/linuxserver/mstream:latest
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: music
              mountPath: /music
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: mstream-config-pvc
        - name: music
          hostPath:
            path: ./music
            type: DirectoryOrCreate
