db-prod.sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    run: db
spec:
  ports:
  - port: 3306
    name: db
  selector:
    run: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-prod
  labels:
    run: db
spec:
  selector:
    matchLabels:
      run: db
  serviceName: "db"
  template:
    metadata:
      generateName: db-prod
      labels:
        run: db
    spec:
      containers:
        - name: db-prod
          image: mysql:5.7
          imagePullPolicy: Always
          ports:
            - name: db
              containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mysql-data
            - mountPath: "/docker-entrypoint-initdb.d/"
              name: sql-schema-data
      volumes:
        - name: secret-volume
          secret:
            secretName: db-secret
        - configMap: 
            name: db-schema-data
          name: sql-schema-data
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        #storageClassName: "openebs-standalone"
        resources:
          requests:
            storage: 1Gi
