service.yml
apiVersion: v1
kind: Service
metadata:
  name: mstream
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: mstream
