web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name: stream
spec:
  rules:
  - host: mlruggieri-stream.my.kube.um.edu.ar
    http:
      paths:
      - backend:
          service:
            name: stream
            port:
              number: 80
        path: /
        pathType: Prefix
